--- a/PGSG-testing.ipynb
+++ b/PGSG-testing.ipynb
@@ -83,8 +83,8 @@
      "data": {
       "text/plain": [
        "2-element Array{Float64,1}:\n",
-       " 0.258761\n",
-       " 0.254567"
+       " 0.258302\n",
+       " 0.267209"
       ]
      },
      "execution_count": 3,
@@ -110,8 +110,8 @@
      "data": {
       "text/plain": [
        "2-element Array{Float64,1}:\n",
-       " -0.00367329\n",
-       "  0.00678734"
+       "  0.000463887\n",
+       " -0.0102122  "
       ]
      },
      "execution_count": 4,
@@ -127,15 +127,17 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
        "2-element Array{Float64,1}:\n",
-       " -0.0112572\n",
-       " -0.0041451"
+       "  0.00124396\n",
+       " -0.0114013 "
       ]
      },
      "execution_count": 5,
@@ -149,7 +151,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "# Example 1b : Constrained Norm Squared with Gaussian Noise\n",
     "Our function to minimize is (1/2)|x|^2 with feasible region x \\geq [1;1].\n",
@@ -163,7 +168,9 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -194,15 +201,17 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
        "2-element Array{Float64,1}:\n",
-       " 1.00014\n",
-       " 1.00014"
+       " 1.00012\n",
+       " 1.00015"
       ]
      },
      "execution_count": 7,
@@ -219,15 +228,17 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
        "2-element Array{Float64,1}:\n",
-       " 1.00041\n",
-       " 1.00043"
+       " 1.00043\n",
+       " 1.00035"
       ]
      },
      "execution_count": 8,
@@ -256,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -264,28 +275,14 @@
    },
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING: Method definition grad_Nonlinear_Least_Squares(Any) in module Main"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
        "grad_Nonlinear_Least_Squares (generic function with 1 method)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " at In[9]:5 overwritten at In[13]:5.\n"
-     ]
     }
    ],
    "source": [
@@ -300,20 +297,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
        "2-element Array{Float64,1}:\n",
-       " 0.532397\n",
-       " 0.532709"
+       " 0.526934\n",
+       " 0.536044"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -325,20 +324,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
        "2-element Array{Float64,1}:\n",
-       " 0.531608\n",
-       " 0.527812"
+       " 0.532663\n",
+       " 0.529227"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
