Minor updates to notebook

--- a/Interactive-PGSG.ipynb
+++ b/Interactive-PGSG.ipynb
@@ -19,7 +19,6 @@
     "1. Implementation of Basic Definitions and Algorithms\n",
     "2. Solving a Few Toy Problems\n",
     "3. Solving a Real Problem - Robust PCA\n",
-    "4. Comparison to the Traditional Stochastic Subgradient Method \n",
     "\n",
     "**Disclaimer**: We make no claim that the code below is optimized or the most efficient version possible. Instead our goal is to give the simplest implementation possible. Speedups are certainly possible using optimized linear algebra packages and by taking advantage of sparsity and parallelization schemes.\n",
     "\n",
@@ -746,8 +745,19 @@
     "editable": true
    },
    "source": [
-    "Note that one pass through the dataset gives us 102 subgradient evaluiations. Thus the above experiment takes approximately 3.5 epochs. Notably, the vast majority of the improvement in objective value comes from the first epoch."
+    "Note that one pass through the dataset gives us 102 subgradient evaluiations. Thus the above experiment takes approximately 3.5 epochs. Notably, the vast majority of the improvement in objective value comes from the first epoch.\n",
+    "\n",
+    "Interestingly, the periodic \"bumps\" in the tail of the objective plot are caused by the inner outer loop structure of our algorithm. Each time a new inner loop begins, its step size is reset and so the first step is quite large. This causes a momentary increase in objective as it likely over shoots the optimal value."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
