Proof read Interactive notebook making minor wording changes

--- a/Interactive-PGSG.ipynb
+++ b/Interactive-PGSG.ipynb
@@ -12,7 +12,7 @@
     "### Benjamin Grimmer and Damek Davis ###\n",
     "___\n",
     "\n",
-    "This notebook follows along the ideas presented in [[1]](https://arxiv.org/abs/1707.03505). Its purpose is to give a simple and understandable implementation of the algorithms and concepts therein. Throughout this document, we will provide references to equations, lemmas, and theorems using the numbering given in that paper. \n",
+    "This notebook follows along the ideas presented in [[1]](https://arxiv.org/abs/1707.03505). Its purpose is to give a simple and understandable implementation of the algorithms and concepts therein. Throughout this document, we may reference equations, lemmas, and theorems using the numbering given in that paper. \n",
     "\n",
     "The general outline of this document is the following:\n",
     "\n",
@@ -50,7 +50,7 @@
     "\n",
     "We make two primary assumptions on the function $\\phi$.\n",
     "* $\\phi(x)$ is Lipschitz continuous (as is commonly assumed by subgradient methods, except entirely avoided by the recent works [here](https://arxiv.org/abs/1703.09280) and [here](https://doi.org/10.1137/15M1027371))\n",
-    "* $\\phi(x) + (\\rho/2) \\|x\\|^2$ is convex for some $\\rho>0$. This is commonly known as weak convexity and corresponds to the function having at most quadratic decrease. Common classes of nonconvex problems like additive composite and convex composite satisfy this condition. \n",
+    "* $\\phi(x) + (\\rho/2) \\|x\\|^2$ is convex for some $\\rho>0$. This corresponds to the function having at most quadratic decrease. This has many different names but we refer to it as weak convexity. Common classes of nonconvex problems like additive composite and convex composite satisfy this condition. \n",
     "\n",
     "Since this problem is nonsmooth, we need to generalize the notion of a gradient to subgradients. There are many different definitions of subgradients for nonconvex problems (e.g., Frechet, Clarke, Limiting, ...), but under our regularity assumptions, these are all equivalent. These are defined in Section 2.1. We denote the subdifferential of $\\phi(x)$ by $\\partial \\phi(x)$. Then our goal is to find a stationary point, that is\n",
     "\n",
@@ -219,7 +219,7 @@
     "$$ innerStepCount(t) = t + 1$$\n",
     "$$ innerStepSize(j) = \\frac{2}{\\rho(j+49)}$$\n",
     "\n",
-    "Then the implementation of PGSG is the following"
+    "Then the implementation of PGSG is the following:"
    ]
   },
   {
@@ -754,7 +754,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": []
